--- a/k8s/k8s-host-change.yaml
+++ b/k8s/k8s-host-change.yaml
@@ -10,7 +10,7 @@ metadata:
     app.kubernetes.io/name: k8s-host-change
 rules:
   - apiGroups:
-      - apps/v1
+      - apps
     resources:
       - deployments
     verbs:
@@ -56,6 +56,15 @@ spec:
       containers:
         - name: k8s-host-change
           image: "cloudogu/k8s-host-change:0.0.1"
+          env:
+            - name: STAGE
+              value: "production"
+            - name: LOG_LEVEL
+              value: "debug"
+            - name: NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
       restartPolicy: Never
       serviceAccountName: k8s-host-change
   backoffLimit: 0
