--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,12 +3,12 @@ sonar.projectName=k8s-host-change
 sonar.projectVersion=0.0.0-dev
 
 sonar.go.coverage.reportPaths=target/unit-test/coverage.out
-sonar.go.govet.reportPaths=target/static-analysis/report-govet.out
+sonar.go.golangci-lint.reportPaths=target/static-analysis/static-analysis-cs.log
 
 sonar.sources=.
 
-sonar.exclusions=**/mocks/**
+sonar.exclusions=**/mocks/**,**/*Mock.go,**/*mock_*_test.go
 
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
-sonar.test.exclusions=**/vendor/**,**/mocks/**
+sonar.test.exclusions=**/vendor/**,**/mocks/**,**/*Mock.go,**/*mock_*_test.go
