Add version templating for release artifact creation.

--- a/k8s/k8s-host-change.yaml
+++ b/k8s/k8s-host-change.yaml
@@ -55,7 +55,7 @@ spec:
     spec:
       containers:
         - name: k8s-host-change
-          image: "cloudogu/k8s-host-change:0.0.1"
+          image: "cloudogu/k8s-host-change:'{{ .Version }}'"
           env:
             - name: STAGE
               value: "production"
