#11 Use correct key in patch templates.

--- a/k8s/helm/component-patch-tpl.yaml
+++ b/k8s/helm/component-patch-tpl.yaml
@@ -6,5 +6,5 @@ patches:
   values.yaml:
     job:
       image:
-        repository: "{{ registryFrom .images.backup-operator }}/{{ repositoryFrom .images.backup-operator }}"
-        tag: "{{ tagFrom .images.backup-operator }}"
+        repository: "{{ registryFrom .images.job }}/{{ repositoryFrom .images.job }}"
+        tag: "{{ tagFrom .images.job }}"
