#18 Use ces-container-registries as imagePullSecrets to support multiple private registries

--- a/k8s/helm/component-patch-tpl.yaml
+++ b/k8s/helm/component-patch-tpl.yaml
@@ -6,5 +6,6 @@ patches:
   values.yaml:
     job:
       image:
-        repository: "{{ registryFrom .images.job }}/{{ repositoryFrom .images.job }}"
+        registry: "{{ registryFrom .images.job }}"
+        repository: "{{ repositoryFrom .images.job }}"
         tag: "{{ tagFrom .images.job }}"
