--- a/k8s/helm/templates/job.yaml
+++ b/k8s/helm/templates/job.yaml
@@ -8,6 +8,10 @@ spec:
   backoffLimit: 0
   template:
     spec:
+      {{- with .Values.global.imagePullSecrets }}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
       containers:
         - env:
             - name: STAGE
@@ -18,7 +22,7 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-          image: {{ .Values.job.image.repository }}:{{ .Values.job.image.tag }}
+          image: "{{ .Values.job.image.registry }}/{{ .Values.job.image.repository }}:{{ .Values.job.image.tag }}"
           name: k8s-host-change
           imagePullPolicy: {{ .Values.job.imagePullPolicy | default "IfNotPresent" }}
       restartPolicy: Never
